[gd_scene load_steps=11 format=3 uid="uid://cnl10kue3lo6a"]

[ext_resource type="PackedScene" uid="uid://cp1plrdyiywox" path="res://Scenes/Backgrounds/Menu_background.tscn" id="1_fp1c3"]
[ext_resource type="Texture2D" uid="uid://c55ftuadbwufu" path="res://Assets/art/sprites/Interfaz/Bottle_menu.png" id="1_jsn1s"]
[ext_resource type="Script" uid="uid://ck6giv4ro3lu6" path="res://Scripts/Intefaz/menu.gd" id="1_qbx0g"]
[ext_resource type="Texture2D" uid="uid://ddl7e7uubl6i3" path="res://Assets/art/sprites/Interfaz/Bottle_menu_pressed.png" id="2_fp1c3"]
[ext_resource type="Texture2D" uid="uid://bih1njcgtuxpr" path="res://Assets/art/sprites/Interfaz/Bottle_menu_hover.png" id="3_erq20"]
[ext_resource type="FontFile" uid="uid://xrh2ke3d1khs" path="res://Assets/fonts/Slackey-Regular.ttf" id="5_erq20"]
[ext_resource type="Texture2D" uid="uid://cjvvb4lk2yv8t" path="res://Assets/art/sprites/Personajes/SmolT.png" id="6_poija"]
[ext_resource type="Texture2D" uid="uid://dhsyhat33qf13" path="res://Assets/art/sprites/Personajes/BIGd.png" id="7_qo1tt"]
[ext_resource type="AudioStream" uid="uid://1dk6hearttkc" path="res://Assets/music/624874__sonically_sound__retro-funk-20032022-1714.wav" id="8_qo1tt"]
[ext_resource type="PackedScene" uid="uid://clgowavqodxut" path="res://Scenes/Animaciones/Sombras.tscn" id="10_t8o0a"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qbx0g")

[node name="MenuBackground" parent="." instance=ExtResource("1_fp1c3")]

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = 13.0
offset_right = 1210.0
offset_bottom = 192.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_erq20")
theme_override_font_sizes/font_size = 116
text = "SPACE-DRUNKS"

[node name="Start" type="TextureButton" parent="."]
layout_mode = 2
offset_left = 503.0
offset_top = 162.0
offset_right = 1343.0
offset_bottom = 2297.0
rotation = 1.5708
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("1_jsn1s")
texture_pressed = ExtResource("2_fp1c3")
texture_hover = ExtResource("3_erq20")

[node name="Label" type="Label" parent="Start"]
layout_mode = 0
offset_left = 390.0
offset_top = 1905.0
offset_right = 1280.0
offset_bottom = 2084.0
rotation = -1.5708
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_erq20")
theme_override_font_sizes/font_size = 128
text = "Start Game"

[node name="Options" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 503.0
offset_top = 322.0
offset_right = 1343.0
offset_bottom = 2457.0
rotation = 1.5708
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("1_jsn1s")
texture_pressed = ExtResource("2_fp1c3")
texture_hover = ExtResource("3_erq20")

[node name="Label" type="Label" parent="Options"]
layout_mode = 0
offset_left = 390.0
offset_top = 1755.0
offset_right = 1280.0
offset_bottom = 1934.0
rotation = -1.5708
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_erq20")
theme_override_font_sizes/font_size = 128
text = "Options"

[node name="Quit" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 506.0
offset_top = 483.0
offset_right = 1346.0
offset_bottom = 2618.0
rotation = 1.5708
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("1_jsn1s")
texture_pressed = ExtResource("2_fp1c3")
texture_hover = ExtResource("3_erq20")

[node name="Label" type="Label" parent="Quit"]
layout_mode = 0
offset_left = 390.0
offset_top = 1610.0
offset_right = 1280.0
offset_bottom = 1789.0
rotation = -1.5708
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_erq20")
theme_override_font_sizes/font_size = 128
text = "Quit"

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(755, 521)
scale = Vector2(1.05556, 0.922262)
texture = ExtResource("6_poija")

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(998, 459)
scale = Vector2(1.1142, 0.850566)
texture = ExtResource("7_qo1tt")

[node name="MusicPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_qo1tt")
autoplay = true

[node name="Sombras_transición" parent="." instance=ExtResource("10_t8o0a")]
visible = false
layout_mode = 0

[node name="Sombra_time" type="Timer" parent="Sombras_transición"]

[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
[connection signal="timeout" from="Sombras_transición/Sombra_time" to="." method="_on_sombra_time_timeout"]
